fix overflow on mobile

--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -18,7 +18,7 @@
   position: absolute;
   width: 100%;
   flex-direction: column;
-  height: calc(100vh - 30px); /* 30px to account for taskbar */
+  height: calc(100% - 30px); /* 30px to account for taskbar */
   box-shadow: 0 0 0 1px #494b46 inset,
               0 0 0 3px #686d62 inset,
               0 0 0 6px #494b46 inset,
